--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .header {
@@ -19,7 +19,18 @@
   
   /* выше установили ограничения для секции */
 }
+
+.logo {
+  z-index: 3;
+  position: absolute;
+  width: 183px;
+  height: 32px;
+  left: 64px;
+  top: 30px;
+}
+
 .header__title {
+  z-index: 2;
   font-weight: bold;
   font-size: 102px;
   line-height: 96px;  
@@ -29,6 +40,7 @@
 }
 
 .header__subtitle {
+  z-index: 2;
   position: absolute;
   bottom: 30px;
   left: 64px;
@@ -44,14 +56,6 @@
   font-weight: normal;
   color: #2f80ed;
   text-decoration: none;
-}
-
-.logo {
-  position: absolute;
-  width: 183px;
-  height: 32px;
-  left: 64px;
-  top: 30px;
 }
 
 .header__main-illustration {
@@ -101,7 +105,6 @@
   flex-direction: column;
   width: 80%;
   min-width: 784px;
-  margin-top: 0;
 }
 
 .two-columns__paragraph {
@@ -129,17 +132,17 @@
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
-  margin-bottom: 20px;
   margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .section-subtitle {
+  margin: 0;
   width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  margin-bottom: 0;
 }
 
 .table {
@@ -160,12 +163,14 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin-top: 0;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin-top: 20px;
 }
 
 .feynman {
@@ -239,19 +244,19 @@
 }
 
 .section-title_theme_dark {
+  z-index: 2;
   margin-top: 90px;
   color: white;
-  margin-bottom: 20px;
 }
 
 .section-subtitle_theme_dark {
+  z-index: 2;
   color: white;
-  margin: 0;
 }
 
 .table__heading_theme_dark {
   margin-bottom: 20px;
-  margin-top: 0;
+  
 }
 
 .kaufman__triangle {
