--- a/styles/style.css
+++ b/styles/style.css
@@ -12,21 +12,25 @@
 .header {
   position: relative;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   background-color:  #f2f2f2;
-  
   /* выше установили ограничения для секции */
 }
 
 .logo {
-  z-index: 3;
-  position: absolute;
   width: 183px;
+}
+
+.logo__place_header {
   height: 32px;
   left: 64px;
   top: 30px;
+  position: absolute;
+  z-index: 3;
 }
 
 .header__title {
@@ -36,7 +40,6 @@
   line-height: 96px;  
   margin-left: 64px;
   width: 730px;
-  align-self: center;
 }
 
 .header__subtitle {
@@ -77,22 +80,20 @@
 }
 
 .description {
-  display: flex;
-  justify-content: center;
+  padding-top: 100px;
 }
 
 .two-columns {
+  margin-bottom: 100px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
   width: 80%;
   min-height: auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
 }
 
 .two-columns__brief {
   color: #2f80ed;
-  text-decoration: none;
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -101,8 +102,6 @@
 }
 
 .two-columns__main-text {
-  display: flex;
-  flex-direction: column;
   width: 80%;
   min-width: 784px;
 }
@@ -132,7 +131,6 @@
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
-  margin-top: 0;
   margin-bottom: 20px;
 }
 
@@ -152,11 +150,13 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 100px;
+  margin-top: 0;
 }
 
 .table__cell {
   width: 250px;
   margin-top: 60px;
+  list-style-type: none;
 }
 
 .table__heading {
@@ -164,6 +164,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .table__text {
@@ -171,22 +172,23 @@
   font-size: 18px;
   font-weight: normal;
   margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .feynman {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: center;
-  height: 890px;
+  height: 790px;
   background-color:  #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  padding-bottom: 100px;
 }
 
 .feynman__title {
-  margin-top: 100px;
+  margin: auto;
+  padding-top: 100px;
   margin-bottom: 70px;
-  z-index: 1;
   text-align: center;
   width: 648px;
   line-height: 1.15;
@@ -196,19 +198,10 @@
 
 .feynman__subtitle {
   text-align: center;
-  z-index: 1;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
 }
-
-.feynman__image {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 867px;
-  height: 637px;
-} 
 
 .feynman__link {
   position: absolute;
@@ -218,7 +211,7 @@
   font-size: 36px;
   font-weight: normal;
   right: 48px;
-  top: 395px;
+  top: 50%;
 }
 
 .kaufman {
@@ -228,19 +221,21 @@
   flex-wrap: wrap;
   background-color: #1f1f1f;
   overflow: hidden;
+  
 }
 
 .table_theme_dark {
   margin-bottom: 90px;
+  padding-left: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
-  z-index: 1;
+  z-index: 3;
   width: 200px;
   color: white;
-  margin-right: 0;
   margin-top: 80px;
+  
 }
 
 .section-title_theme_dark {
@@ -254,89 +249,91 @@
   color: white;
 }
 
-.table__heading_theme_dark {
-  margin-bottom: 20px;
-  
-}
-
 .kaufman__triangle {
+  position: absolute;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: 877px 877px;
   width: 877px;
   height: 877px;
-  position: absolute;
   right: -210px;
   top: 0;
 }
 
 .footer {
-  display: flex;
-  justify-content: center;
   min-height: 350px;
   background-color: #1f1f1f;
+  display: flex;
+  justify-content: center;
 }
 
 .footer__columns {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
   width: 90%;
-  margin-top: 60px;
-  color: white;
-  margin-bottom: 40px;
-}
-
-.footer__columns_content_copyright {
   display: flex;
-  align-items: flex-end;
-  flex-basis: 711px;
+  color: white;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  justify-content: space-between;
 }
 
-.logo_place_footer {
-  left: 0;
-  top: 0;
+.footer__column_content_copyright {
+  flex-direction: column;
+  margin: 0;
+}
+
+.logo__place_footer {
+  background-image: url(../images/logo_place_footer.svg);
   width: 183px;
   height: 35px;
-  background-image: url(../images/logo_place_footer.svg);
 }
 
 .footer__author {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  padding-top: 18px;
   margin-bottom: 18px;
+  margin-top: 18px;
+}
+
+.footer__column_content_info {
+  flex-basis: 711px;
+  margin: 0;
+  justify-content: flex-end;
+}
+
+.footer__column_content_social {
+  flex-basis: 711px;
+  margin: 0;
+  justify-content: flex-end;
+}
+
+.footer__column-list {
+  list-style-type: none;
+  margin-top: 0;
 }
 
 .footer__column-heading {
   margin-top: 0;
   margin-bottom: 20px;
   line-height: 30px;
-  font-size: 18px;
+  font-size: 18px ;
   font-weight: bold;
-}
-
-.footer__column-links {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.footer__columns_content_info {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__columns_content_social {
-  display: flex;
-  flex-direction: column;
 }
 
 .footer__column-links {
   text-decoration: none;
   color: white;
+  margin-bottom: 20px;
+  line-height: 30px;
+  font-size: 18px ;
+  font-weight: normal;
 }
 
 .footer__social-icon {
+  margin-right: 10px;
   width: 16px;
   height: 16px;
-  margin-right: 10px;
 }
+
+
+ 
+
