--- a/styles/style.css
+++ b/styles/style.css
@@ -221,7 +221,6 @@
   flex-wrap: wrap;
   background-color: #1f1f1f;
   overflow: hidden;
-  
 }
 
 .table_theme_dark {
@@ -235,7 +234,6 @@
   width: 200px;
   color: white;
   margin-top: 80px;
-  
 }
 
 .section-title_theme_dark {
@@ -275,12 +273,16 @@
   justify-content: space-between;
 }
 
-.footer__column_content_copyright {
+.footer__column {
+  display: flex;
   flex-direction: column;
-  margin: 0;
 }
 
-.logo__place_footer {
+.footer__column_content_copyright {
+  flex-basis: 711px;
+}
+
+.logo_place_footer {
   background-image: url(../images/logo_place_footer.svg);
   width: 183px;
   height: 35px;
@@ -290,25 +292,13 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 18px;
-  margin-top: 18px;
+  margin-top: auto;
 }
 
-.footer__column_content_info {
-  flex-basis: 711px;
-  margin: 0;
-  justify-content: flex-end;
-}
-
-.footer__column_content_social {
-  flex-basis: 711px;
-  margin: 0;
-  justify-content: flex-end;
-}
-
-.footer__column-list {
+.footer__column-links {
   list-style-type: none;
   margin-top: 0;
+  padding-left: 0;
 }
 
 .footer__column-heading {
@@ -319,7 +309,7 @@
   font-weight: bold;
 }
 
-.footer__column-links {
+.footer__column-link {
   text-decoration: none;
   color: white;
   margin-bottom: 20px;
