--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -6,7 +6,7 @@
     position: relative;
     height: 790px;
     background-color:  #f2f2f2;
-    background-image: url(../../../images/feynman.png);
+    background-image: url(../../images/feynman.png);
     background-position: left bottom;
     background-repeat: no-repeat;
     padding-bottom: 100px;
