--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,8 +1,8 @@
-@import url(../../section-title/section-title.css);
-@import url(../../section-subtitle/section-subtitle.css);
-@import url(../../table/table.css);
+@import url(../section-title/section-title.css);
+@import url(../section-subtitle/section-subtitle.css);
+@import url(../table/table.css);
 @import url(./__triangle/kaufman__triangle.css);
-@import url(../../rotation/rotation.css);
+@import url(../rotation/rotation.css);
 
 .kaufman {
     position: relative;
