Исправил структуру и др ошибки

--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,6 +1,5 @@
-@import url(../two-columns/two-columns.css);
-
 .oakley {
     padding-top: 160px;
     background-color: #f2f2f2;
+    padding-bottom: 80px;
 }
